# kathara-checker-scoring

./: .gitignore  README.md  pyproject.toml
src/kathara_checker_scoring/: __main__.py  models.py  parsing.py  scoring.py
